@@ -198,6 +198,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7918) "Templates used on this page" changes during preview to reflect
   any added or removed templates.
 * (bug 7918) "Templates used on this page" is now shown for read-only pages.
+* (bug 7688) When viewing diff, section anchors in autosummary jump to section
+  on current page.
 
 
 == Languages updated ==
